Fix CATS-1456 [UI]:- Change Admin Dashbaord page to the new theme

--- a/Web/Areas/Settings/Views/AdminDashboard/Index.cshtml
+++ b/Web/Areas/Settings/Views/AdminDashboard/Index.cshtml
@@ -1,18 +1,15 @@
-﻿@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_MainLayout.cshtml";
+﻿@using Cats.Helpers
+@{
+    ViewBag.Title = "Dashboard";
+    Layout = "~/Views/Shared/NewTheme _MainLayout_Sidebar.cshtml";
+    ViewBag.PageTitle = Html.Translate("Administration Dashboard");
+    ViewBag.PageTitleDescription = "";
 }
 
-
-
-@section Leftbar
-{
+@section SIDEBAR{
     @Html.Partial("_AdminLeftBar")
 }
 
-
-
-<h4> Administration Dashboard </h4>
     <ul>
         @Html.Partial("_DynamicAdminDashboard")
-</ul>
+    </ul>
