--- a/Web/Areas/Settings/Views/Shared/Dashboard/_Commodity.cshtml
+++ b/Web/Areas/Settings/Views/Shared/Dashboard/_Commodity.cshtml
@@ -1,39 +1,48 @@
-﻿<div class="widget stacked">
-    <div id="commodHeader" class="widget-header">
-        <i class=""></i>
-        <h3>Commodity</h3>
+﻿@using Cats.Helpers
+
+<div id="commodHeader" class="portlet-title">
+    <div class="caption font-green-sharp">
+        <span class="caption-subject bold uppercase"> @Html.Translate("Commodity")</span>
     </div>
-    <div id="commoContent" class="widget-content">
-        <div class="">
-            <a href="@Url.Action("Index", "CommodityType", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-list-alt"></i>
+</div>
+<div id="commoContent" class="portlet-body">
+    <ul>
+        <li>
+            <a href="@Url.Action("Index", "CommodityType", new {Area = "Settings"})" class="shortcut">
                 <span class="shortcut-label">Commodity Type</span>
             </a>
-            <br/>
-            <a href="@Url.Action("Index", "Commodity", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-signal"></i>
+        </li>
+        <li>
+            <a href="@Url.Action("Index", "Commodity", new {Area = "Settings"})" class="shortcut">
                 <span class="shortcut-label">Commodity</span>
             </a>
-             <br/>
-            <a href="@Url.Action("Index", "CommodityGrade", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-inbox"></i>
+        </li>
+        <li>
+            <a href="@Url.Action("Index", "CommodityGrade", new {Area = "Settings"})" class="shortcut">
                 <span class="shortcut-label">Commodity Grade</span>
             </a>
-             <br/>
-            <a href="@Url.Action("Index", "CommoditySource", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-tasks"></i>
+        </li>
+        <li>
+            <a href="@Url.Action("Index", "CommoditySource", new {Area = "Settings"})" class="shortcut">
                 <span class="shortcut-label">Commodity Source</span>
             </a>
-             <br/>
-            <a href="@Url.Action("Index", "Program", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-bell"></i>
+        </li>
+        <li>
+            <a href="@Url.Action("Index", "Program", new {Area = "Settings"})" class="shortcut">
                 <span class="shortcut-label">Program</span>
             </a>
-             <br/>
-            <a href="@Url.Action("Index", "Donor", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-cog"></i>
+        </li>
+        <li>
+            <a href="@Url.Action("Index", "Donor", new {Area = "Settings"})" class="shortcut">
                 <span class="shortcut-label">Donors</span>
             </a>
-             <br/>
-            <a href="@Url.Action("Index", "Unit", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-cog"></i>
+        </li>
+        <li>
+            <a href="@Url.Action("Index", "Unit", new {Area = "Settings"})" class="shortcut">
                 <span class="shortcut-label">Units</span>
             </a>
-        </div>
-    </div>
+        </li>
+    </ul>
 </div>
 
 <script>
