--- a/Web/Areas/Settings/Views/Shared/Dashboard/_Systemlog.cshtml
+++ b/Web/Areas/Settings/Views/Shared/Dashboard/_Systemlog.cshtml
@@ -1,28 +1,32 @@
-﻿<div class="widget stacked">
-    <div id="syslogHeader" class="widget-header">
-        <i class=""></i>
-        <h3>System Log</h3>
+﻿@using Cats.Helpers
+
+
+<div id="syslogHeader" class="portlet-title">
+    <div class="caption font-green-sharp">
+        <span class="caption-subject bold uppercase"> @Html.Translate("System Log")</span>
     </div>
-
-    <div id="syslogContent" class="widget-content">
-<div class="">
-                    <a href="@Url.Action("Index", "Log", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-list-alt"></i>
-                        <span class="shortcut-label">Error Log</span>
-                    </a>
-    <br/>
-                    <a href="@Url.Action("Index", "UserActivity", new { Area = "Settings" })" class="shortcut"><i class="shortcut-icon icon-signal"></i>
-                        <span class="shortcut-label">Audit Log</span>
-                    </a>
-    <br/>
-                    <a href="@Url.Action("", "", new { Area = "EarlyWarning" })" class="shortcut"><i class="shortcut-icon icon-inbox"></i>
-                        <span class="shortcut-label">Help</span>
-                    </a>
-    <br/>
-                </div>
-            </div>
-
 </div>
 
+<div id="syslogContent" class="portlet-body">
+    <ul>
+        <li>
+            <a href="@Url.Action("Index", "Log", new {Area = "Settings"})" class="shortcut">
+
+                <span class="shortcut-label">Error Log</span>
+            </a>
+        </li>
+        <li>
+            <a href="@Url.Action("Index", "UserActivity", new {Area = "Settings"})" class="shortcut">
+                <span class="shortcut-label">Audit Log</span>
+            </a>
+        </li>
+        <li>
+            <a href="@Url.Action("", "", new {Area = "EarlyWarning"})" class="shortcut">
+                <span class="shortcut-label">Help</span>
+            </a>
+        </li>
+    </ul>
+</div>
 
 <script>
     $("#syslogHeader").click(function () {
