--- a/Web/Areas/Settings/Views/Shared/Dashboard/_TransactionAndJournals.cshtml
+++ b/Web/Areas/Settings/Views/Shared/Dashboard/_TransactionAndJournals.cshtml
@@ -1,21 +1,25 @@
-﻿<div class="widget stacked">
-    <div id="transdHeader" class="widget-header">
-        <i class=""></i>
-        <h3>Transaction and Journals</h3>
-    </div>
-    <div id="transContent" class="widget-content">
-       <div class="">
-            <a href="@Url.Action("", "", new { Area = "EarlyWarning" })" class="shortcut"><i class="shortcut-icon icon-list-alt"></i>
-                <span class="shortcut-label">Journal</span>
-            </a>
-           <br/>
-            <a href="@Url.Action("", "", new { Area = "EarlyWarning" })" class="shortcut"><i class="shortcut-icon icon-signal"></i>
-                <span class="shortcut-label">Ledger</span>
-            </a>
-           <br/>
-        </div>
+﻿@using Cats.Helpers
+
+<div id="transdHeader" class="portlet-title">
+    <div class="caption font-green-sharp">
+        <span class="caption-subject bold uppercase"> @Html.Translate("Transaction and Journals")</span>
     </div>
 </div>
+<div id="transContent" class="portlet-body">
+    <ul>
+        <li>
+            <a href="@Url.Action("", "", new { Area = "EarlyWarning" })" class="shortcut">
+                <span class="shortcut-label">Journal</span>
+            </a>
+        </li>
+        <li>
+            <a href="@Url.Action("", "", new { Area = "EarlyWarning" })" class="shortcut">
+                <span class="shortcut-label">Ledger</span>
+            </a>
+        </li>
+    </ul>
+</div>
+
 <script>
     $("#transdHeader").click(function () {
         $("#transContent").slideToggle("slow", "linear");
