--- a/Web/Areas/Settings/Views/Shared/Dashboard/_Translation.cshtml
+++ b/Web/Areas/Settings/Views/Shared/Dashboard/_Translation.cshtml
@@ -1,22 +1,25 @@
-﻿<div class="widget stacked">
-    <div id="trdHeader" class="widget-header">
-        <i class=""></i>
-        <h3>Translation</h3>
-    </div>
-    <div id="trdContent" class="widget-content">
-        <div class="">
-            <a href="@Url.Action("Index", "Language", new { Area = "Localization" })" class="shortcut"><i class="shortcut-icon icon-list-alt"></i>
-                <span class="shortcut-label">Languages</span>
-            </a>
-            <br/>
-            <a href="@Url.Action("Details", "Language", new { Area = "Localization" })" class="shortcut"><i class="shortcut-icon icon-signal"></i>
-                <span class="shortcut-label">Translation Terms</span>
-            </a>
-            <br/>
-           
-        </div>
+﻿@using Cats.Helpers
+
+<div id="trdHeader" class="portlet-title">
+    <div class="caption font-green-sharp">
+        <span class="caption-subject bold uppercase"> @Html.Translate("Translation")</span>
     </div>
 </div>
+<div id="trdContent" class="portlet-body">
+    <ul>
+        <li>
+            <a href="@Url.Action("Index", "Language", new {Area = "Localization"})" class="shortcut">
+                <span class="shortcut-label">Languages</span>
+            </a>
+        </li>
+        <li>
+            <a href="@Url.Action("Details", "Language", new {Area = "Localization"})" class="shortcut">
+                <span class="shortcut-label">Translation Terms</span>
+            </a>
+        </li>
+    </ul>
+</div>
+
 
 <script>
     $("#trdHeader").click(function () {
