--- a/Web/Areas/Regional/Views/Home/Index.cshtml
+++ b/Web/Areas/Regional/Views/Home/Index.cshtml
@@ -16,8 +16,8 @@
     @*<link href="~/Content/Dashboard/dashboardcomponents.css" rel="stylesheet" />*@
     <style type="text/css">
         .flag {
-            width: 60px;
-            height: 30px;
+            width: 60px !important;
+            height: 30px !important;
             background: url("/Content/images/Regionsflags.png") no-repeat;
             border-top-right-radius: 12px;
             border-top-left-radius: 12px;
