--- a/Web/Areas/Logistics/Views/Delivery/Dispatches.cshtml
+++ b/Web/Areas/Logistics/Views/Delivery/Dispatches.cshtml
@@ -262,7 +262,7 @@
                                                 </button>
                                                 <ul class="dropdown-menu pull-right">
 
-                                                    <li class="edit_button"><a href="javascript:workflow_history(item.DeliveryBusinessProcessId)"> History </a></li>
+                                                    <li class="edit_button"><a href="javascript:workflow_history(item.BusinessProcessId)"> History </a></li>
 
                                                 </ul>
                                             </div>
@@ -323,6 +323,9 @@
                                         <th style="overflow: visible; white-space: normal;" scope="col" data-title="Created Date" data-field="CreatedDatePref" class="cats-date-pref-grid">
                                             <span>Created Date</span>
                                         </th>
+                                        <th style="overflow: visible; white-space: normal;" scope="col" data-title="id" data-field="BusinessProcessId">
+                                            <span>id</span>
+                                        </th>
                                         <th style="overflow: visible; white-space: normal;" scope="col" data-title="Workflow" data-field="Workflow">
                                             <span>History</span>
                                         </th>
@@ -347,7 +350,7 @@
                                         <td>{{item.PlateNo_Trailer}}</td>
                                         <td>{{item.DriverName}}</td>
                                         <td>{{item.DispatchDatePref}}</td>
-                                        <td>{{item.CreatedDatePref}}</td>
+                                        <td>{{item.CreatedDatePref}}</td>                                       
                                         <td>
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-default dropdown-toggle btn-xs green-stripe" data-toggle="dropdown">
@@ -355,7 +358,7 @@
                                                 </button>
                                                 <ul class="dropdown-menu pull-right">
 
-                                                    <li class="edit_button"><a ng-click="workflow_history(item.DeliveryBusinessProcessId)"> History </a></li>
+                                                    <li class="edit_button"><a ng-click="workflow_history(item.BusinessProcessId)"> History </a></li>
 
                                                 </ul>
                                             </div>
@@ -417,6 +420,7 @@
                                         <th style="overflow: visible; white-space: normal;" scope="col" data-title="Created Date" data-field="CreatedDatePref" class="cats-date-pref-grid">
                                             <span>Created Date</span>
                                         </th>
+                                        <th></th>
                                         <th style="overflow: visible; white-space: normal;" scope="col" data-title="Workflow" data-field="Workflow">
                                             <span>History</span>
                                         </th>
@@ -442,7 +446,7 @@
                                         <td>{{item.PlateNoTrailler}}</td>
                                         <td>{{item.DriverName}}</td>
                                         <td>{{item.DispatchDatePref}}</td>
-                                        <td>{{item.CreatedDatePref}}</td>
+                                        <td>{{item.CreatedDatePref}}</td>                                      
                                         <td>
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-default dropdown-toggle btn-xs green-stripe" data-toggle="dropdown">
@@ -450,7 +454,7 @@
                                                 </button>
                                                 <ul class="dropdown-menu pull-right">                                                  
 
-                                                    <li class="edit_button"><a ng-click="workflow_history(item.DeliveryBusinessProcessId)"> History </a></li>
+                                                    <li class="edit_button"><a ng-click="workflow_history(item.BusinessProcessId)"> History </a></li>
 
                                                 </ul>
                                             </div>
