--- a/Web/Views/Shared/_DataActivityIndicator.cshtml
+++ b/Web/Views/Shared/_DataActivityIndicator.cshtml
@@ -36,7 +36,7 @@ button:focus {
     position: relative;
     left: 600px;
     top: 0px;
- 
+
       max-width:300px;
        max-height:300px;
 }
@@ -117,7 +117,7 @@ button:focus {
 
 
                         <Label><small>Activity</small></Label>
-                        @*<img class="loadingActivity" ng-show="ctrlStatus.loadingActivity" src="~/Content/Icons/loading.gif" />*@
+                        <img class="loadingActivity" ng-show="ctrlStatus.loadingActivity" src="~/Content/Icons/loading.gif" />
 
                         <select id="Activity" multiple="multiple"  @*ng-disabled="ctrlStatus.loadingActivity"*@ class="form-control" data-toggle="tooltip" data-placement="top" title="Activity" ng-model="filterData.selectedActivities">
                             <option ng-repeat="activity in controlData.lookupActivities| orderBy : 'name'" value="{{activity.name}}">{{activity.name}}</option>
@@ -137,7 +137,7 @@ button:focus {
                     <div class="col-md-2 ">
                         <button type="button"  ng-hide="searching" style="margin-top: 13px;"  ng-disabled="searching || ctrlStatus.loadingDocument || ctrlStatus.loadingActivity || ctrlStatus.loadingUser" data-toggle="tooltip" data-placement="top" ng-click="applyFilter()" title="Get Activities based on the Criteria">
                         <h4 ><img src="~/Content/Icons/Search Icon.png" class="text-warning" style="max-width:45px; max-height:50px;" /><span><strong>Get</strong></span></h4> </button>
-                                    
+
                          <p class="text-info" ng-show="searching"><img src="~/Content/Icons/search.gif" style="max-width:65px; max-height:70px;" />Searching... </p>
 
                     </div>
@@ -169,7 +169,7 @@ button:focus {
                                     <td ng-repeat="actCount in user.data track by $index" class="truseractivity" ng-click="openDetail(user.name,$index)"
                                         data-original-title="Click for Detail" data-container="body" data-toggle="tooltip" data-placement="bottom" title="Click to View Records">
 
-                                        <a ng-click="showModal()">   {{actCount}}</a>
+                                        <a ng-click="openDetail(user.name,$index)">   {{actCount}}</a>
 
                                     </td>
 
