Report design title is modified.

--- a/Web/Report/PSNP/AnnualPlan.rdlc
+++ b/Web/Report/PSNP/AnnualPlan.rdlc
@@ -1125,7 +1125,7 @@
             <Paragraph>
               <TextRuns>
                 <TextRun>
-                  <Value>NATIONAL DISASTER MANAGEMENT COMMISSION</Value>
+                  <Value>NATIONAL DISASTER RISK MANAGEMENT COMMISSION</Value>
                   <Style>
                     <FontSize>12pt</FontSize>
                     <FontWeight>Bold</FontWeight>
