--- a/Web/Report/Procurment/TransportOrder.rdlc
+++ b/Web/Report/Procurment/TransportOrder.rdlc
@@ -346,7 +346,6 @@
                                           <PaddingBottom>2pt</PaddingBottom>
                                         </Style>
                                       </Textbox>
-                                      <rd:Selected>true</rd:Selected>
                                     </CellContents>
                                   </TablixCell>
                                   <TablixCell>
@@ -891,7 +890,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>NATIONAL DISASTER MANAGEMENT COMMISSION</Value>
+                                  <Value>NATIONAL DISASTER RISK MANAGEMENT COMMISSION</Value>
                                   <Style>
                                     <FontSize>12pt</FontSize>
                                     <FontWeight>Bold</FontWeight>
