CATS-SLA-R-1.3.6 Hotfix on TO page and Add woreda remak validation

--- a/Web/Areas/Procurement/Views/PriceQuotation/AddWoreda.cshtml
+++ b/Web/Areas/Procurement/Views/PriceQuotation/AddWoreda.cshtml
@@ -85,7 +85,7 @@
                 <div class="controls">
                     @*@Html.DropDownList( "WoredaID",ViewBag.WoredaID as SelectList, new {@id="WoredaID"})*@
                     @Html.TextAreaFor(m => m.Remark)
-                    @Html.ValidationMessageFor(m => m.Remark)
+                    @*@Html.ValidationMessageFor(m => m.Remark)*@
                 </div>
 
             </div>
