--- a/Web/Areas/Procurement/Views/TransportOrder/Index.cshtml
+++ b/Web/Areas/Procurement/Views/TransportOrder/Index.cshtml
@@ -146,75 +146,75 @@
             </div>
         </div>
         @(Html.Kendo().Grid<TransportOrderViewModel>().Name("Grid").Columns(columns =>
-          {
-              columns.Template(t => { }).Title("No").ClientTemplate(
-                  "#= renderNumber(data) #").Width(25);
-              columns.Bound(to => to.ContractNumber).Title(@Html.Translate("Contract Number")).Width(140).ClientTemplate("<a href='" + Url.Action("OrderDetail", "TransportOrder", new {Area = "Procurement", id = "#=TransportOrderID#"}) + " '>#=ContractNumber#</a>  ").HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal;"});
-              //columns.Bound(to => to.TransportOrderNo).ClientTemplate("<a href='" + Url.Action("Details", "TransportOrder", new { Area = "Procurement", id = "#=TransportOrderID#" }) + " '>#=TransportOrderNo#</a>  ").HeaderHtmlAttributes(new { style = "overflow: visible; white-space: normal;" });
-              columns.Bound(to => to.Transporter).Width(140).Title(@Html.Translate("Transporter"));
-              columns.Bound(to => to.BidDocumentNo).Width(65).Title(Html.Translate("Bid Document #")).HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal;"});
-              //columns.Bound(to => to.OrderDateET).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
-              // columns.Bound(to => to.OrderExpiryDateET).Title(Html.Translate("Order Expiry Date")).Width(60).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;"});
-              columns.Bound(to => to.StartDate).Width(60).Title(Html.Translate("Start Date")).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;"});
-              columns.Bound(to => to.EndDate).Width(60).Title(Html.Translate("End Date")).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;"});
-              // columns.Bound(to => to.RequestedDispatchDateET).Title(Html.Translate("Requested Dispatch Date")).Width(60).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;"});
-              columns.Bound(to => to.TransportOrderNo).Title(Html.Translate("Transport Order No")).Width(80).HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal;"});
-              ;
-              columns.Bound(to => to.Status).Title(Html.Translate("Status")).Width(45).HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal;"});
-              ;
-              //columns.Command(p =>
-              //{
+    {
+        columns.Template(t => { }).Title("No").ClientTemplate(
+            "#= renderNumber(data) #").Width(25);
+        columns.Bound(to => to.ContractNumber).Title(@Html.Translate("Contract Number")).Width(140).ClientTemplate("<a href='" + Url.Action("OrderDetail", "TransportOrder", new {Area = "Procurement", id = "#=TransportOrderID#"}) + " '>#=ContractNumber#</a>  ").HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal;"});
+        //columns.Bound(to => to.TransportOrderNo).ClientTemplate("<a href='" + Url.Action("Details", "TransportOrder", new { Area = "Procurement", id = "#=TransportOrderID#" }) + " '>#=TransportOrderNo#</a>  ").HeaderHtmlAttributes(new { style = "overflow: visible; white-space: normal;" });
+        columns.Bound(to => to.Transporter).Width(140).Title(@Html.Translate("Transporter"));
+        columns.Bound(to => to.BidDocumentNo).Width(65).Title(Html.Translate("Bid Document #")).HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal;"});
+        //columns.Bound(to => to.OrderDateET).HeaderHtmlAttributes(new { @class = "cats-date-pref-grid" });
+        // columns.Bound(to => to.OrderExpiryDateET).Title(Html.Translate("Order Expiry Date")).Width(60).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;"});
+        columns.Bound(to => to.StartDate).Width(60).Title(Html.Translate("Start Date")).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;"});
+        columns.Bound(to => to.EndDate).Width(60).Title(Html.Translate("End Date")).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;"});
+        // columns.Bound(to => to.RequestedDispatchDateET).Title(Html.Translate("Requested Dispatch Date")).Width(60).HeaderHtmlAttributes(new {@class = "cats-date-pref-grid", style = "overflow: visible; white-space: normal;"});
+        columns.Bound(to => to.TransportOrderNo).Title(Html.Translate("Transport Order No")).Width(80).HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal;"});
+        ;
+        columns.Bound(to => to.Status).Title(Html.Translate("Status")).Width(45).HeaderHtmlAttributes(new {style = "overflow: visible; white-space: normal;"});
+        ;
+        //columns.Command(p =>
+        //{
 
-              //if (UserAccountHelper.LogisticsOperationCheck(LogisticsConstants.Operation.Approve_transport_order))
-              //{
-              //    p.Custom("Approve").Click("onApprove");
-              //}
-              //if (UserAccountHelper.LogisticsOperationCheck(LogisticsConstants.Operation.Sign_transport_order))
-              //{
-              //    p.Custom("Signed").Click("onSigned");
-              //}
-              //if (UserAccountHelper.LogisticsOperationCheck(LogisticsConstants.Operation.Edit_transport_order))
-              //{
-              //    p.Custom("Edit").Click("onEdit");
-              //}
-              //if (UserAccountHelper.LogisticsOperationCheck(LogisticsConstants.Operation.Revert_transport_order))
-              //{
-              //    p.Custom("Revert TO").Click("onRevert");
-              //}
-              //}).Width(100);
-              columns.Bound(trasportOrder => trasportOrder.Status).Title("Actions")
-                  .ClientTemplate(
-                      @"<div class='btn-group'>
+        //if (UserAccountHelper.LogisticsOperationCheck(LogisticsConstants.Operation.Approve_transport_order))
+        //{
+        //    p.Custom("Approve").Click("onApprove");
+        //}
+        //if (UserAccountHelper.LogisticsOperationCheck(LogisticsConstants.Operation.Sign_transport_order))
+        //{
+        //    p.Custom("Signed").Click("onSigned");
+        //}
+        //if (UserAccountHelper.LogisticsOperationCheck(LogisticsConstants.Operation.Edit_transport_order))
+        //{
+        //    p.Custom("Edit").Click("onEdit");
+        //}
+        //if (UserAccountHelper.LogisticsOperationCheck(LogisticsConstants.Operation.Revert_transport_order))
+        //{
+        //    p.Custom("Revert TO").Click("onRevert");
+        //}
+        //}).Width(100);
+        columns.Bound(trasportOrder => trasportOrder.Status).Title("Actions")
+            .ClientTemplate(
+                @"<div class='btn-group'>
                 <button type='button' id='workflow-#=TransportOrderID#' class='btn btn-default dropdown-toggle btn-xs green-stripe' data-toggle='dropdown'>
                     <i class='fa fa-ellipsis-horizontal'></i>Workflow<i class='fa fa-angle-down'></i>
                 </button>
                 <ul class='dropdown-menu pull-right' style='overflow: visible;'>" +
-                      "# if (Status == 'Approved') { #" +
-                      "# if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
-                      "<li class='edit_button'><a href = \"javascript:promot_workflow('#=BusinessProcessID#','#=SignStateID#','Sign','#=TransportOrderID#')\" title='Sign Transport Order'>Sign</a></li>" +
-                      " # } #" + " # } #" +
-                      "# if (Status == 'Approved') { #" +
-                      "# if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
-                      "<li class='edit_button'><a href = \"javascript:promot_workflow('#=BusinessProcessID#','#=RejectStateID#','Reject','#=TransportOrderID#')\" title='Reject Transport Order'>Reject</a></li>" +
-                      " # } #" + " # } #" +
-                       "# if (Status == 'Rejected') { #" +
-                      "# if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
-                      "<li class='edit_button'><a href = \"javascript:promot_workflow('#=BusinessProcessID#','#=ApproveStateID#','Approve','#=TransportOrderID#')\" title='Approve TransportOrder'>Approve</a></li>" +
-                      " # } #" + " # } #" +
-                      "# if (Status == 'Draft' || Status == 'Edited') { #" +
-                      "# if (Status == 'Draft' || Status == 'Edited') { #" +
-                      "# if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
-                      "<li class='edit_button'><a href = \"javascript:promot_workflow('#=BusinessProcessID#','#=ApproveStateID#','Approve','#=TransportOrderID#')\" title='Approve TransportOrder'>Approve</a></li>" +
-                      " # } #" + " # } #" + " # } #" +
+                "# if (Status == 'Approved') { #" +
+                "# if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
+                "<li class='edit_button'><a href = \"javascript:promot_workflow('#=BusinessProcessID#','#=SignStateID#','Sign','#=TransportOrderID#')\" title='Sign Transport Order'>Sign</a></li>" +
+                " # } #" + " # } #" +
+                "# if (Status == 'Approved') { #" +
+                "# if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
+                "<li class='edit_button'><a href = \"javascript:promot_workflow('#=BusinessProcessID#','#=RejectStateID#','Reject','#=TransportOrderID#')\" title='Reject Transport Order'>Reject</a></li>" +
+                " # } #" + " # } #" +
+                 "# if (Status == 'Rejected') { #" +
+                "# if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
+                "<li class='edit_button'><a href = \"javascript:promot_workflow('#=BusinessProcessID#','#=ApproveStateID#','Approve','#=TransportOrderID#')\" title='Approve TransportOrder'>Approve</a></li>" +
+                " # } #" + " # } #" +
+                //"# if (Status == 'Draft' || Status == 'Edited') { #" +
+                "# if (Status == 'Draft' || Status == 'Edited') { #" +
+                "# if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
+                "<li class='edit_button'><a href = \"javascript:promot_workflow('#=BusinessProcessID#','#=ApproveStateID#','Approve','#=TransportOrderID#')\" title='Approve TransportOrder'>Approve</a></li>" +
+                " # } #" + " # } #" + /*" # } #" +*/
 
-                      " # if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
-                      "<li class='edit_button'><a href=\"javascript: workflow_history('#=BusinessProcessID#')\"> History </a></li>" +
-                      " # } #" +
+                " # if ('" + LogisticsConstants.isValidOperation(LogisticsConstants.Operation.Approve_transport_order).ToString() + "' == 'Approve_transport_order') { #" +
+                "<li class='edit_button'><a href=\"javascript: workflow_history('#=BusinessProcessID#')\"> History </a></li>" +
+                " # } #" +
 
-                "</ul></div>");
+          "</ul></div>");
 
 
-          })
+    })
 
               .Filterable()
               .Sortable().TableHtmlAttributes(new {@class = "table table-condensed"})
